--- a/photoalbum/templates/album.html
+++ b/photoalbum/templates/album.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 
-
   {% block content %}
     <div id="templatemo_middle">
     
@@ -15,10 +14,8 @@
     </div>
     
     <div id="templatemo_content">
-          {% for image in images %}
-             <a href="{{ media_url }}{{ image.name }}"><img border="0"  /></a>          
-          {% endfor %}
 
+    <a class="fancybox" href="../static/images/photoalbum/jason_minardi5.jpg"><img src="../static/images/photoalbum/jason_minardi5.jpg" alt=""/>
         <div class="cleaner"></div>
       </div>
       <div id="templatemo_content_bottom"></div>
