--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -132,7 +132,7 @@ function clearText(field)
         <div class="content_box">
 
         <div id="countdown_container">
-            <h2>Time until <span id='wedding_date'>September 27, 2014, 4:30pm!</span></h2>
+            <h2 id="wedding_date_container">Time until <span id='wedding_date'>September 27, 2014, 4:30pm!</span></h2>
             <div id='countdown'>
                 <div class='time_container'>
                     <div id='days'></div>
@@ -156,8 +156,8 @@ function clearText(field)
                 </div>
             </div>
         </div>
-
-        <div class="content_box last">
+        <br><br><br>
+        <!-- <div class="content_box last">
         
             <div class="col_w340">
                 <h2>Featured Articles</h2>
@@ -179,6 +179,7 @@ function clearText(field)
                     <p>Aenean cursus. Maecenas aliquam, ligula id egestas suscipit, nisisapien dignissim nibh.</p>
                     <div class="cleaner"></div>
 				</div>
+            <br><br><br>
                 <a class="more float_r" href="#">View All</a>
             </div>
             
@@ -201,7 +202,7 @@ function clearText(field)
 				</div>
             </div>
             
-    	</div>
+    	</div> -->
     	<div class="cleaner"></div>
     </div>
     <div id="templatemo_content_bottom"></div>
