added requirements.txt and update readme

--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -66,7 +66,8 @@ function clearText(field)
                 </ul>
               </li>
               <li><a href="/guestbook/">Guestbook</a></li>
-              <li><a href="mailto:paulandjason27@gmail.com" target="_blank" class="last">Contact Us</a></li>
+              <li><a href="mailto:paulandjason27@gmail.com" target="_blank" >Contact Us</a></li>
+              <li><a href="https://github.com/pnichols104/wedding-website#wedding-website" target="_blank" class="last">About This Site</a></li>
         </ul>   
      
 <!--         <div id="login">
