--- a/photoalbum/templates/album.html
+++ b/photoalbum/templates/album.html
@@ -15,7 +15,12 @@
     
     <div id="templatemo_content">
 
-    <a class="fancybox" href="../static/images/photoalbum/jason_minardi5.jpg"><img src="../static/images/photoalbum/jason_minardi5.jpg" alt=""/>
+<!--     <a class="fancybox" href="../static/images/photoalbum/jason_minardi5.jpg"><img src="../static/images/photoalbum/jason_minardi5.jpg" alt=""/> -->
+
+
+    <a class="fancybox-thumb" rel="fancybox-thumb" href="../static/images/photoalbum/jason_minardi5.jpg" title="Ayvalık, Turkey (Nejdet Düzen)">
+  <img src="../static/images/photoalbum/jason_minardi5.jpg" alt="" />
+</a>
         <div class="cleaner"></div>
       </div>
       <div id="templatemo_content_bottom"></div>
