--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -7,9 +7,14 @@
 <meta name="keywords" content="Paul, Nichols, Jason, Olsen, Nicholsen, Wedding," />
 <meta name="description" content="Personal website for the Nicholsen big gay wedding" />
 <link rel="stylesheet" href="/static/css/templatemo_style.css"  type="text/css" />
+<!-- general fancybox and jquery -->
 <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script type="text/javascript" src="/static/js/fancybox/jquery.fancybox.pack.js"></script>
 <link rel="stylesheet" href="/static/js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+<!-- for fancy box thumbnails -->
+<link rel="stylesheet" href="/static/js/fancybox/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
+<script type="text/javascript" src="/static/js/fancybox/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
+<script type="text/javascript" src="/static/js/fancybox/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
 <script type="text/javascript" src="/static/js/base.js"></script>
 <script language="javascript" type="text/javascript">
 function clearText(field)
