--- a/photoalbum/templates/album.html
+++ b/photoalbum/templates/album.html
@@ -17,7 +17,7 @@
 
 
   {% for image in images %}
-      <a class="fancybox-thumb" rel="fancybox-thumb" href="../static/images/photoalbum/{{image}}" title="{{image.title}}">
+      <a class="fancybox-thumb" rel="photo_album" href="../static/images/photoalbum/{{image}}" title="{{image.title}}">
   <img src="../static/images/photoalbum/{{image}}" alt="" />
 {% endfor %}
         <div class="cleaner"></div>
