--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -66,7 +66,7 @@ function clearText(field)
               </li>
               <li><a href="#">Guest Info</a>
                 <ul>
-                    <li><a href="#">Map</a></li>
+                    <li><a href="/map/">Map</a></li>
                     <li><a href="#" class="last">Lodging</a></li>
                 </ul>
               </li>
