new photos added to album, styled

--- a/mainsite/templates/location.html
+++ b/mainsite/templates/location.html
@@ -4,7 +4,7 @@
   {% block content %}
     <div id="templatemo_middle">
     
-    	<div id="middle_img"><img class="middle_img" src="/static/images/paul_jason_3babies2.jpg" alt="image" /><span></span></div>
+    	<div id="middle_img"><img class="middle_img" src="/static/images/venue_waterfall.jpg" alt="image" /><span></span></div>
         
         <div id="m_right">
 	        <h1>Ceremony & Reception</h1>
@@ -15,7 +15,7 @@
     </div>
     
     <div id="templatemo_content">
-    THIS IS WHERE OUR WEDDING IS
+    Our ceremony and reception will be at <a href='http://www.chaletonthehudson.com/index.html'>Chalet on the Hudson</a> in Cold Spring, NY.  The site is fully handicapped-accessible and can be reached by taking the Hudson Line of Metro-North Railroad to the Breakneck Ridge station.
     	<div class="cleaner"></div>
     </div>
     <div id="templatemo_content_bottom"></div>
