spent 45 fucking minutes looking for a changed hyphen.  I found it.

--- a/mainsite/static/css/templatemo_style.css
+++ b/mainsite/static/css/templatemo_style.css
@@ -353,7 +353,7 @@ a.more:hover { text-decoration: none; color: #fff; }
 
 .user_answer{
 	color: red;
-	font-weight: bold,
+	font-weight: 700,
 }
 
 .error{
