--- a/photoalbum/templates/album.html
+++ b/photoalbum/templates/album.html
@@ -6,8 +6,8 @@
  <div id="middle_img"></div>
 
  <div id="m_right">
-   <h1>See who knows us best!</h1>
-   <p>And who is dead to us.</p>
+   <h1>It's a Photo Album.</h1>
+   <p>Do you really need an explanation?</p>
 
  </div>
 
