--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -38,13 +38,6 @@ function clearText(field)
     <div id="templatemo_header">
 
         
-<!--         <div id="search_box">
-            <form action="#" method="get">
-                <input type="text" value="Type a keyword &amp; hit enter" name="q" size="10" 
-                id="searchfield" title="searchfield" onfocus="clearText(this)" onblur="clearText(this)" />
-            </form>
-        </div> -->
-        
     </div>
     
     <div id="templatemo_menu">
@@ -52,19 +45,19 @@ function clearText(field)
               <li><a href="/">Home</a></li>
               <li><a href="#">About Us</a>
                 <ul>
-                    <li><a href="/quiz/">Quiz</a></li>
+                    <li><a href="/quiz/" >Quiz</a></li>
                     <li><a href="/photos/">Photos</a></li>
                     <li><a href="/story/" class="last">Our Story</a></li>
                 </ul>
               </li>
-              <li><a href="#">Wedding Day</a>
+              <li><a href="#" class='header_link' >Wedding Day</a>
                 <ul>
                     <li><a href="/location/">Ceremony/Reception</a></li>
                     <li><a href="/wedding_party/">Our Wedding Party</a></li>
                     <li><a href="#" class="last">After Party</a></li>
                 </ul>
               </li>
-              <li><a href="#">Guest Info</a>
+              <li><a href="#" class='header_link'>Guest Info</a>
                 <ul>
                     <li><a href="/map/">Map</a></li>
                     <li><a href="#" class="last">Lodging</a></li>
@@ -74,11 +67,7 @@ function clearText(field)
               <li><a href="mailto:paulandjason27@gmail.com" target="_blank" >Contact Us</a></li>
               <li><a href="https://github.com/pnichols104/wedding-website#wedding-website" target="_blank" class="last">About This Site</a></li>
         </ul>   
-     
-<!--         <div id="login">
-            <a id="login_fancy" title="Login" href="#login_form">Login</a> or <a id="newuser_fancy" title="Newuser" href="#newuser_form">Register</a>-->
-<!--         </div> 
- -->        
+        
         <div class="cleaner"></div>
         
     </div> <!-- end of templatemo_menu -->
@@ -126,6 +115,8 @@ function clearText(field)
             </div>
         </div>
         <br><br>
+
+        <div id='welcome'>Have fun looking around what is arguably the best wedding website ever created.  Take the <a href="/quiz/" >quiz</a> to see how well you know Jason and Paul.  Look through the <a href="/photos/">photo album</a> and marvel at those handsome devils.  Be sure to leave a message on the <a href="/guestbook/">guestbook</a> proclaiming your love and devotion for the boys!</div>
         <!-- <div class="content_box last">
         
             <div class="col_w340">
