--- a/mainsite/templates/location.html
+++ b/mainsite/templates/location.html
@@ -15,7 +15,7 @@
     </div>
     
     <div id="templatemo_content">
-    Our ceremony and reception will be at <a href='http://www.chaletonthehudson.com/index.html'>Chalet on the Hudson</a> in Cold Spring, NY.  The site is fully handicapped-accessible and can be reached by taking the Hudson Line of Metro-North Railroad to the Breakneck Ridge station.
+    <h4>Our ceremony and reception will be at <a href='http://www.chaletonthehudson.com/index.html'>Chalet on the Hudson</a> in Cold Spring, NY.  The site is fully handicapped-accessible and can be reached by taking the Hudson Line of Metro-North Railroad to the Breakneck Ridge station.</h4>
     	<div class="cleaner"></div>
     </div>
     <div id="templatemo_content_bottom"></div>
