fixed styling on messaged box, ruined it everywhere else

--- a/mainsite/templates/guestbook.html
+++ b/mainsite/templates/guestbook.html
@@ -18,18 +18,18 @@
       <div class='container'><a id='guest_submit' href='#message_form'>Leave us a message!</a></div>
       
       <div> 
-        <form id='message_form' action="/guestbook/" method="post">
+        <form id='message_form' action="/guestbook/" method="post" role='form'>
         <div id='guest_error'>
           <p class='error'>Make sure you fill out all fields!</p>
         </div>
           {% csrf_token %}
-          <p>
-            <label for="guest_name">Name: </label>
-            <input type="text" id="guest_name" name="name"/>
-          <p>
-            <label for "guest_message">Message: </label>
-            <input type="textarea" id="guest_message" name="message"/>
-          </p>
+          <div class="form-group">
+            <input type="text" id="guest_name" class='form-control' name="name" placeholder='Name'/>
+          </div>
+          <div class="form-group">
+
+            <textarea class='form-control' id="guest_message" name="message" placeholder='Message' rows='5'/></textarea>
+          </div>
           <input type="submit"/>
         </form>
       </div>
