--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -16,6 +16,7 @@
 <script type="text/javascript" src="/static/js/fancybox/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
 <script type="text/javascript" src="/static/js/fancybox/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
 <script type="text/javascript" src="/static/js/base.js"></script>
+<link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
 <script language="javascript" type="text/javascript">
 function clearText(field)
 {
