--- a/photoalbum/templates/album.html
+++ b/photoalbum/templates/album.html
@@ -6,8 +6,8 @@
  <div id="middle_img"></div>
 
  <div id="m_right">
-   <h1>It's a Photo Album.</h1>
-   <p>Do you really need an explanation?</p>
+   <h1 id='photo_album_title'>It's a Photo Album.</h1>
+   <p id='photo_album_caption'>Do you really need an explanation?</p>
 
  </div>
 
