--- a/mainsite/templates/location.html
+++ b/mainsite/templates/location.html
@@ -15,7 +15,7 @@
     </div>
     
     <div id="templatemo_content">
-    <h4>Our ceremony and reception will be at <a href='http://www.chaletonthehudson.com/index.html'>Chalet on the Hudson</a> in Cold Spring, NY.  The site is fully handicapped-accessible and can be reached by taking the Hudson Line of Metro-North Railroad to the Breakneck Ridge station.</h4>
+    <h4>Our ceremony and reception will be at <a href='http://www.chaletonthehudson.com/index.html'>Chalet on the Hudson</a> in Cold Spring, NY.  The site is fully handicapped-accessible and can be reached by taking the Hudson Line of Metro-North Railroad to the Breakneck Ridge station.  We will probably provide a shuttle from the train station to the ceremony or hotel or something, but we might just make you walk for our own amusement.  It's up in the air.</h4>  </h3>I really don't know what else to say about this.  Someone ask me a question so I can beef this up with something relevant.</h3>
     	<div class="cleaner"></div>
     </div>
     <div id="templatemo_content_bottom"></div>
