--- a/mainsite/templates/guestbook.html
+++ b/mainsite/templates/guestbook.html
@@ -7,15 +7,15 @@
     	<div id="middle_img"><img class="middle_img" src="/static/images/paul_jason_moochie.jpg" alt="Gross" /></div>
         
         <div id="m_right">
-	        <h1>Our Guestbook</h1>
-            <p>Tell us how wonderful we are.</p>  
-            <p>It's OK, we don't get tired of hearing it.</p>
+	        <h1 class='guestbook_title'>Our Guestbook</h1>
+            <p class='guestbook_title'>Tell us how wonderful we are!</p>  
+            <p class='guestbook_title'>It's OK, we don't get tired of hearing it.</p>
           	
 		    </div>
     
     </div>
         <div id="templatemo_content">
-      <div class='container'><a id='guest_submit' href='#message_form'>Leave us a message!</a></div>
+      <div id='submit_btn_container'><a id='guest_submit' href='#message_form'>Leave us a message!</a></div>
       
       <div> 
         <form id='message_form' action="/guestbook/" method="post" role='form'>
@@ -51,9 +51,9 @@
         </div>
         {% endif %}
         {% if not forloop.last %}
-          <hr>
-        {% endif %}
       </div>
+          <hr class='guest_hr'>
+        {% endif %}
       {% endfor %}
     </div>
 
