--- a/mainsite/static/css/templatemo_style.css
+++ b/mainsite/static/css/templatemo_style.css
@@ -271,14 +271,19 @@ a.more:hover { text-decoration: none; color: #fff; }
 	background: url(/static/images/templatemo_frame.png) no-repeat;
 }
 
-#m_right {
+#m_right, #ackbar_speech {
 	float: right;
 	width: 450px;
 	padding-top: 20px;
 	padding-right: 50px;
 }
 
-#m_right h1 { color: #ddd; margin-bottom: 15px; text-align: center}
+#m_right h1, #ackbar_speech h1{ color: #ddd; margin-bottom: 15px; text-align: center}
+
+#ackbar_speech h1{
+	margin-top: 40px;
+	font-size: 50px;
+}
 #m_right p { color: #969696; font-size: 16px; font-family: Georgia, "Times New Roman", Times, serif; text-align: justify }
 
 #templatemo_content {
@@ -593,4 +598,8 @@ label {
 	font-weight: normal;
 	margin-left: 3px;
 	padding-top: 1px;
+}
+
+#map_container{
+	text-align: center;
 }
