--- a/mainsite/templates/guestbook.html
+++ b/mainsite/templates/guestbook.html
@@ -20,7 +20,7 @@
       <div> 
         <form id='message_form' action="/guestbook/" method="post" role='form'>
         <div id='guest_error'>
-          <p class='error'>Make sure you fill out all fields!</p>
+          <p class='error'>Make sure you fill out both fields!</p>
         </div>
           {% csrf_token %}
           <div class="form-group">
