--- a/photoalbum/templates/album.html
+++ b/photoalbum/templates/album.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div id="templatemo_middle">
 
- <div id="middle_img"></div>
+ <div id="middle_img"><img class="middle_img" src="/static/images/kitty.jpg" alt="image" /><span></span></div>
 
  <div id="m_right">
    <h1 id='photo_album_title'>It's a Photo Album.</h1>
