added frames to wedding party

--- a/mainsite/templates/weddingparty.html
+++ b/mainsite/templates/weddingparty.html
@@ -20,7 +20,7 @@
     <div class='wedding_party_row'>
         <div class='wedding_party_row_contents'>
             <div class = 'wedding_party_header'>
-                Our Officiant
+                The Officiant
             </div>
             <div class='wedding_party_member'>
              <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
@@ -34,7 +34,7 @@
                     </div>
                 </div>
             </div>
-                    <div class="party_name">Ursula XXVII - Creative Director</div>
+                    <div class="party_name">Ursula Miller the XXVII<br>Creative Director</div>
         </div>
     </div>
 </div>
@@ -46,7 +46,7 @@
 <div class='wedding_party_row'>
     <div class='wedding_party_row_contents'>
         <div class='wedding_party_header'>
-            Our Best Men
+            Best Men
         </div>
         <div class='wedding_party_member'>
             <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
@@ -60,7 +60,7 @@
                     </div>
                 </div>
             </div>
-                    <div class="party_name">Minardi - Princess DaintyPants</div>
+                    <div class="party_name">Minardi<br>Princess DaintyPants</div>
         </div>  
         <div class='wedding_party_member'>
             <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
@@ -74,7 +74,7 @@
                     </div>
                 </div>
             </div>
-                    <div class="party_name">Matt - VP of Awesome</div>
+                    <div class="party_name">Matt Angrisani<br>VP of Awesome</div>
         </div>  
     </div>
 </div>
@@ -95,7 +95,7 @@
                     </div>
                 </div>
             </div>
-                    <div class="party_name">Megan - The Chief Justice</div>
+                    <div class="party_name">Megan Muttberts<br>The Chief Justice</div>
         </div>   
         <div class='wedding_party_member'>
             <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
@@ -109,7 +109,7 @@
                     </div>
                 </div>
             </div>
-                    <div class="party_name">Kate - Chief Science Officer</div>
+                    <div class="party_name">Kate Zwaard<br>Chief Science Officer</div>
         </div>  
     </div>
 </div>
@@ -127,7 +127,7 @@
                     </div>
                 </div>
             </div>
-                    <div class="party_name">Frank - Consultant of Epicness</div>
+                    <div class="party_name">Frank DiLorenzo<br>Consultant of Epicness</div>
         </div>   
         <div class='wedding_party_member'>
             <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
@@ -141,7 +141,7 @@
                     </div>
                 </div>
             </div>
-                    <div class="party_name">Steve - Rockstar Extraordinaire</div>
+                    <div class="party_name">Steve Hopkins<br>Senior Rockstar Extraordinaire</div>
         </div>  
     </div>
 </div> 
@@ -166,7 +166,7 @@
                 </div>
             </div>
         </div>
-                <div class="party_name">Sophia - Queen of All Things, Jr.</div>
+                <div class="party_name">Sophia DiLorenzo<br>Queen of All Things, Jr.</div>
     </div>  
     <div class='wedding_party_member'>
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
@@ -180,7 +180,7 @@
                 </div>
             </div>
         </div>
-                <div class="party_name">Jackson - Evil Genius</div>
+                <div class="party_name">Jackson DiLorenzo<br>Evil Genius</div>
     </div>  
     <div class='wedding_party_member'>
      <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
@@ -194,7 +194,7 @@
             </div>
         </div>
     </div>
-            <div class="party_name">Jacob - Sergeant-At-Arms</div>
+            <div class="party_name">Jacob DiLorenzo<br>Sergeant-At-Arms</div>
 </div>  
 </div>
 </div>          
