--- a/mainsite/static/css/templatemo_style.css
+++ b/mainsite/static/css/templatemo_style.css
@@ -528,12 +528,10 @@ p.guestbook{
 }
 
 .wedding_party_header{
-	font-size: 18px;
-	font-weight: bold;
+	font-size: 28px;
 	clear: both;
 	text-align: center;
-	font-style: italic;
-}
+	font-family: Cambria, Georgia, serif;}
 
 .wedding_party_row{
 	clear: both;
@@ -549,8 +547,8 @@ p.guestbook{
 }
 
 .party_image img{
-	height: 270px;
-	width: 270px;
+	height: 240px;
+	width: 240px;
 	text-align: center;
 }
 
@@ -559,16 +557,19 @@ p.guestbook{
 	text-align: center;
 	font-size: 16px;
 	padding-top: 10px;
+	font-family: Cambria, Georgia, serif;
 }
 
 .party_text{
-	text-align: justify;
+	text-align: center;
 /*	  width: 90%;
   height: 40%;*/
 /*  overflow: auto;
 */  margin: auto;
   position: absolute;
   top: 50px; left: 10px; bottom: 0; right: 10px;
+  font-family: Cambria, Georgia, serif;
+  font-size: 16px;
 }
 
 .party_text_container{
@@ -628,6 +629,7 @@ label {
 	width: 320px;
 	height: 480px;
 	margin: 10px 0 10px 0;
+
 }
 
 /* flip speed goes here */
@@ -645,6 +647,23 @@ label {
 	position: absolute;
 	top: 0;
 	left: 0;
+	-webkit-box-shadow:
+            0px 0px 0px 2px rgba(0,0,0,0.6),
+                0px 0px 0px 14px #fff,
+                0px 0px 0px 18px rgba(0,0,0,0.2),
+                6px 6px 8px 17px #555;
+   
+     -moz-box-shadow:
+            0px 0px 0px 2px rgba(0,0,0,0.6),
+                0px 0px 0px 14px #fff,
+                0px 0px 0px 18px rgba(0,0,0,0.2),
+                6px 6px 8px 17px #555;
+   
+          box-shadow:
+            0px 0px 0px 2px rgba(0,0,0,0.6),
+                0px 0px 0px 14px #fff,
+                0px 0px 0px 18px rgba(0,0,0,0.2),
+                6px 6px 8px 17px #555;
 }
 
 /* front pane, placed above back */
@@ -655,7 +674,6 @@ label {
 /* back, initially hidden pane */
 .back {
 	transform: rotateY(180deg);
-	border: 1px solid black;
 	background-color: #99CCFF;ß
 }
 
@@ -664,11 +682,12 @@ label {
     -moz-perspective: 1000;
     -o-perspective: 1000;
     perspective: 1000;
+    margin: 20px 26px 32px 26px;
 }
 
 .flip-container, .front, .back {
-    width: 280px;
-    height: 270px;
+    width: 240px;
+    height: 240px;
 }
 
 .flipper {
