--- a/mainsite/static/css/templatemo_style.css
+++ b/mainsite/static/css/templatemo_style.css
@@ -612,9 +612,27 @@ label {
 
 #map_container{
 	text-align: center;
+
 }
 
-
+#map{-webkit-box-shadow:
+            0px 0px 0px 2px rgba(0,0,0,0.6),
+                0px 0px 0px 18px #fff,
+                0px 0px 0px 22px rgba(0,0,0,0.2),
+                6px 6px 8px 21px #555;
+   
+     -moz-box-shadow:
+            0px 0px 0px 2px rgba(0,0,0,0.6),
+                0px 0px 0px 18px #fff,
+                0px 0px 0px 22px rgba(0,0,0,0.2),
+                6px 6px 8px 21px #555;
+   
+          box-shadow:
+            0px 0px 0px 2px rgba(0,0,0,0.6),
+                0px 0px 0px 18px #fff,
+                0px 0px 0px 22px rgba(0,0,0,0.2),
+                6px 6px 8px 21px #555;
+            }
 
 /* entire container, keeps perspective */
 .flip-container {
