--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -13,7 +13,7 @@
 <!-- for fancy box thumbnails -->
 <link rel="stylesheet" href="/static/js/fancybox/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
 <script type="text/javascript" src="/static/js/fancybox/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
-<script type="text/javascript" src="/static/js/fancybox/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
+<!-- <script type="text/javascript" src="/static/js/fancybox/helpers/jquery.fancybox-media.js?v=1.0.6"></script> -->
 <script type="text/javascript" src="/static/js/base.js"></script>
 <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
 <link rel="stylesheet" href="/static/css/templatemo_style.css"  type="text/css" />
